# pondpilot

./: .editorconfig  .env  .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc.cjs  .stylelintignore  .stylelintrc.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  OXIDIZE_PR_REVIEW_PART1.md  OXIDIZE_PR_REVIEW_PART2.md  PR_TEMPLATE.md  README.md  TWITTER_CONTENT_CALENDAR.md  TWITTER_MARKETING_PLAN.md  docker-playwright.sh  eslint.config.mjs  index.html  jest.config.js  justfile  package.json  playwright.config.ts  review_2025-10-16.md  tailwind.config.js  tsconfig.json  unified-attachment-architecture.md  vite.config.mjs
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: 1-bug-report.md  2-feature-request.md  3-question.md  4 - UX  4-ux.md  config.yml
.github/workflows/: build-and-test.yml  deploy-pages.yml  docker-build.yml  pr-maintenance.yml  pr-post-test.yml  pr.yml  pw-tests.yml  release-drafter.yml  release.yml
docker/: Dockerfile  extra-headers.conf  nginx.conf  ssl.conf
docs/: DATABASE_ENGINE_ABSTRACTION_SPEC.md  GRACEFUL_STARTUP_HANDLING.md  LOGGING_POLICY.md  MACOS_ENTITLEMENTS.md  PERSISTENCE_TABLE_MIGRATION.md  PONDPILOT_ARCHITECTURE.md  TAURI_BROWSER_COMPATIBILITY.md  TAURI_IMPLEMENTATION_PLAN.md  TAURI_IMPLEMENTATION_STATUS.md  TAURI_PERSISTENCE_DESIGN.md  TAURI_UNIFIED_STREAMING_ARCHITECTURE.md  VISUAL_ETL_PIPELINE_BUILDER.md  comparison_design.md  database-abstraction-recommendations.md  macos-signing-notarization.md  tauri-persistence-implementation.md
docs/plans/: 2026-01-31-pr-review-fixes.md  2026-02-01-metadata-stats-panel.md  2026-02-11-sql-notebook.md  2026-02-12-stable-cell-reference-architecture.md  2026-05-20-use-statement-and-per-tab-sessions.md  20260316-google-oauth-signin-byoc.md
docs/sample-data/: regional_sales_metrics_2024.csv
docs/sample-notebooks/: comprehensive-join-lineage-playground.sqlnb
eslint-custom-rules/: no-playwright-page-methods.js
eslint-local-rules/: index.js
misc/: cross-browser-demo.html  filesystem-api-test.html
public/: _headers  google-oauth-callback.html
scripts/: build-and-sign-macos.sh  check-bundle-size.mjs  check-port.js  ensure-gsheets-wasm.mjs  install-gsheets-wasm.mjs  install-readstat-wasm.mjs  run-tauri.js  tauri-dev-safe.sh
src/: app-urls.ts  app.tsx  globals.d.ts  index.css  main.tsx  models.ts  secrets-app.tsx  utils.ts  vite-env.d.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json  secrets.json
src-tauri/docs/: secrets-management-design.md
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  constants.rs  errors.rs  lib.rs  main-full.rs  main.rs  menu.rs  persistence.rs  startup_checks.rs  system_resources.rs
src-tauri/src/commands/: mod.rs  stream.rs  utils.rs
src-tauri/src/connections/: commands.rs  errors.rs  manager.rs  mod.rs  models.rs
src-tauri/src/database/: arrow_streaming.rs  connection.rs  connection_handler.rs  connection_manager.rs  connection_wrapper.rs  engine.rs  extensions.rs  mod.rs  motherduck_token.rs  pool.rs  progress.rs  query_builder.rs  resource_manager.rs  session_persistence.rs  sql_classifier.rs  sql_sanitizer.rs  sql_utils.rs  thread_safe_pool.rs  types.rs  unified_pool.rs
src-tauri/src/platform/: mod.rs  unix.rs  windows.rs
src-tauri/src/secrets/: commands.rs  errors.rs  injector.rs  keychain.rs  manager.rs  metadata_store.rs  mod.rs  models.rs  tests.rs  validator.rs
src-tauri/src/security/: mod.rs
src-tauri/src/streaming/: mod.rs
src-tauri/src/windows/: mod.rs
src-tauri/tests/: security_tests.rs
src/components/: error-boundary.tsx  tauri-test.tsx
src/config/: constants.ts
src/constants/: dnd.ts
src/consts/: ai.ts  idb.ts  local-storage.ts  local-storage.tsx  version-history.ts
src/controllers/: db-explorer.ts  export-data.ts  file-explorer.ts  sql-formatter.ts  tab-execution-error.ts
src/engines/: README.md  connection-pool-adapter.ts  connection-pool-with-retry.ts  connection-with-timeout.ts  database-engine-factory.ts  debug-logger.ts  duckdb-native-engine.ts  duckdb-tauri-engine.ts  duckdb-tauri-engine.ts.backup  duckdb-wasm-connection-pool.ts  duckdb-wasm-connection.ts  (+9 more)
tests/: example.spec.ts  utils.ts
(+1259 files in other folders)
